k8s_playbooks/application_manifests/media/tautulli/tautulli.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli-deployment
  namespace: media
  labels:
    app: tautulli
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tautulli
  template:
    metadata:
      labels:
        app: tautulli
    spec:
      containers:
        - name: tautulli
          image: docker.io/tautulli/tautulli:latest
          ports:
            - containerPort: 8181
          volumeMounts:
            - mountPath: /config
              subPath: configs/tautulli-data
              name: media-pv
      volumes:
        - name: media-pv
          persistentVolumeClaim:
            claimName: media-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: tautulli-service
  namespace: media
spec:
  selector:
    app: tautulli
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8181
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tautulli-ingress
  namespace: media
spec:
  ingressClassName: nginx
  rules:
  - host: tautulli.cv-labs.net
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tautulli-service
            port:
              number: 80
