k8s_playbooks/application_manifests/media/tautulli/tautulli_ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: tautulli.cv-labs.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: 
            port:
              number: 80
